added drag and drop route and created contants file and add all nav-paths there to have one source of truth for both nav-bar and index.html/home page

--- a/src/pages/slideshow/index.css
+++ b/src/pages/slideshow/index.css
@@ -1,5 +1,12 @@
+@import url('../../../style.default.css');
+
 #slide-container {
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
+}
+
+button {
+    padding: 6px 15px;
+    margin: 10px 10px 0 0;
 }
