--- a/src/pages/drag-and-drop/index.css
+++ b/src/pages/drag-and-drop/index.css
@@ -1,1 +1,27 @@
 @import url('../../../style.default.css');
+
+h2 {
+  margin: 0 0 2rem;
+}
+
+.container {
+  background-color: #333;
+  margin-bottom: 1rem;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.container .draggable {
+  background-color: #f5f5f5;
+  padding: 1rem;
+  width: 100%;
+  cursor: move;
+}
+
+.draggable.dragging {
+  opacity: 0.5;
+}
