--- a/style.default.css
+++ b/style.default.css
@@ -9,7 +9,7 @@ body {
 }
 
 main {
-  padding: 10px;
+  padding: 1rem;
 }
 
 button {
@@ -27,4 +27,43 @@ li {
 
 a {
   text-decoration: none;
+}
+
+#nav {
+  /* background-color: brown; */
+  position: relative;
+  width: 100%;
+  max-width: 100%;
+  padding: 10px 1rem;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 10px;
+
+  &::after {
+    content: '';
+    position: absolute;
+    background-color: gray;
+    left: 0;
+    top: 100%;
+    width: 100%;
+    height: 3px;
+    border-radius: 5px;
+  }
+}
+
+#nav a {
+  white-space: nowrap;
+  position: relative;
+
+  &::before {
+    content: '';
+    position: absolute;
+    background-color: gray;
+    left: -10px;
+    top: 0;
+    width: 2px;
+    height: 100%;
+  }
 }
